# biofouling

./: .gitignore  agent.md  pyproject.toml  readme.md  render.yaml
backend/: main.py
config/: competition_baseline.json  science_calibration.json
docs/: ais_download_integration.md  api_design.md  competition_baseline.md  copernicus_access.md  data_completion_plan.md  data_dictionary.md  data_requirements.md  data_sources_catalog.md  deployment_runbook.md  download_scope_plan.md  environment_data_plan.md  exposure_anomaly_module.md  fpi_forecast_module.md  metric_design.md  parameter_sources.md  phase_1_0_acceptance.md  phase_1_5_roadmap.md  pipeline_runbook.md  project_background.md  reference_layer_plan.md  scientific_review.md  scientific_statement.md  scientific_validation.md  scoring_rationale.md  vessel_static_validation_plan.md
frontend/: README.md  index.html  package-lock.json  package.json
scripts/: __init__.py  build_demo_visuals.py  build_features.py  build_fpi_sequence_dataset.py  build_regional_risk.py  build_science_brief.py  build_science_calibration.py  build_science_validation.py  build_scoring_comparison.py  build_vessel_catalog.py  check_data_readiness.py  convert_ais_tracks_json.py  download_ais_sliced.py  download_env_copernicus.py  evaluate_exposure_autoencoder.py  evaluate_fpi_lstm.py  export_frontend_demo_data.py  export_scientific_statement_html.ps1  exposure_anomaly.py  extract_mmsi_from_region_events.py  fpi_forecast.py  generate_report.py  ingest_ais.py  process_env.py  summarize_validation_events.py  train_exposure_autoencoder.py  (+1 more)
(+76 files in other folders)
