[project]
name = "biofouling"
version = "0.1.0"
description = "AIS and marine-environment driven biofouling risk analysis platform."
readme = "readme.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.0",
    "numpy>=2.2.0",
    "pandas>=2.2.0",
    "pydantic>=2.11.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.0",
    "uvicorn>=0.35.0",
    "xarray>=2025.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []

[tool.pytest.ini_options]
testpaths = ["tests"]
